modificacion en archivos

--- a/Pag_Web/Pages/Producto.cshtml
+++ b/Pag_Web/Pages/Producto.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Pag_Web.Pages.ProductoModel
 @{
-    ViewData["Title"] = "ProductosService";
+    ViewData["Title"] = "Productos ";
 }
 <h1>@ViewData["Title"]</h1>
 
